--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
+<head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="js/app.js"></script>
+
+</head>
 <body>
-
-
-<form action="profile.php",method="Post">
+	<div id="button"><button>test</button></div>
+<form action="" method="post">
 First name:<br>
-<input type="text" name="firstname">
+<div id="firstname"><input  type="text" name="firstname"></div>
 <br>
 Last name:<br>
-<input type="text" name="lastname"><br>
+<div id="lastname"><input  type="text" name="lastname"></div>
 <input type="radio" name="sex" value="male" checked>Male
 <br>
 <input type="radio" name="sex" value="female">Female<br>
@@ -18,8 +23,3 @@ Last name:<br>
 </body>
 </html>
 
-
-<?php
-echo "Hello";
-
-?>
